--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -36,13 +36,6 @@
   "copyRight2018": "Copyright 2018",
   "DIRBS": "DIRBS",
   "allRightsReserved": "All Rights Reserved",
-  "version": "Version",
-  "button.ok": "Ok",
-  "error": "Error",
-  "serverNotResponding": "Server Not Responding",
-  "sessionExpired":"Session Expired",
-  "credentialMatch": "Credential Match",
-  "wrongHttp" : "Wrong Http",
-  "validation.langError": "Unsupported Language",
-  "unprocessibleEntity" : "Unprocessible Entity"
+  "version": "Version"
+
 }
