--- a/src/locales/id/translation.json
+++ b/src/locales/id/translation.json
@@ -36,12 +36,6 @@
   "copyRight2018": "Hak Cipta 2018",
   "DIRBS": "DIRBS",
   "allRightsReserved": "Seluruh hak cipta",
-  "version": "Versi",
-  "button.ok": "Baik",
-  "error": "Kesalahan",
-  "serverNotResponding": "Server Tidak Menanggapi",
-  "sessionExpired":"Sesi berakhir",
-  "credentialMatch": "Pencocokan Kredensial",
-  "validation.langError": "Bahasa tidak didukung",
-  "unprocessibleEntity" : "Entitas yang tidak dapat diproses"
+  "version": "Versi"
+
 }
