DPS Intenationalization Done

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -44,5 +44,62 @@
   "credentialMatch": "Credential Match",
   "wrongHttp" : "Wrong Http",
   "validation.langError": "Unsupported Language",
-  "unprocessibleEntity" : "Unprocessible Entity"
+  "unprocessibleEntity" : "Unprocessible Entity",
+
+  "serialNumber": "Serial Number",
+  "macAddress": "MAC Address",
+  "typeImei": "Type IMEI ",
+  "retypeImei": "Retype IMEI",
+  "addImeIs": "Add IMEIs",
+  "retypeSerialNumber": "Retype Serial number",
+  "brand": "Brand",
+  "modelName": "Model Name",
+  "macWiFiAddress": "MAC (Wi-Fi) address",
+  "retypeMacWiFiAddress": "Retype MAC (Wi-Fi) address",
+  "radioAccessTechnologies": "Radio Access Technologies",
+  "referenceMsisdn": "Reference MSISDN",
+  "deviceImeiS": "Device IMEI(s)",
+  "IMEIDeviceInfoOne": "IMEI can contain alphanumeric characters (0-9, A-F). The length of the IMEI should be between 14-16 characters.",
+  "IMEIDeviceInfoTwo": "In a single request up to 5 IMEI numbers can be added.",
+  "MACInfoOne": "MAC addresses are 6-byte (48 bits) in length, and are written in the following formats",
+  "clearSearch": "Clear Search",
+  "deviceIdentifiers": "Device Identifiers",
+  "selectTechnologies": "Select Technologies",
+  "home": "Home",
+  "devicePairingSubsystem": "Device Pairing Subsystem",
+  "fileHasBeen": "File has been",
+  "uploaded": "Uploaded",
+  "successfully": "successfully",
+  "summary": "Summary",
+  "total": "Total",
+  "invalid": "Invalid",
+  "valid": "Valid",
+  "clickToDownload": "Click to download",
+  "clearAll": "Clear All",
+  "searchFilters": "Search Filters",
+  "pairingCode": "Pairing Code",
+  "pairingStatus": "Pairing Status",
+  "noRequestFound": "No requests found",
+  "show": "Show",
+  "showing": "Showing",
+  "requests": "Requests",
+  "pleaseWait": "Please wait, Your request is in Process",
+  "to": "to",
+
+  "validation.oneOfTheAboveFieldsIsRequired": "One of the above fields is required",
+  "validation.enteredImeiDoesnTMatch": "Entered IMEI doesn't match",
+  "validation.imeiMustContain": "IMEI must contain 14 to 16 characters and contains a combination of [0-9] and [A-F]",
+  "validation.brandMustContainCharactersAndACombinationOf": "Brand must contain characters and a combination of [-._ ']",
+  "validation.brandMustBe1000CharactersOrLess": "Brand must be 1000 characters or less",
+  "validation.modelNameMustContainCharactersAndACombinationOf": "Model Name must contain characters and a combination of [-._']",
+  "validation.modelNameMustBe1000CharactersOrLess": "Model Name must be 1000 characters or less",
+  "validation.thisFieldIsRequired": "This field is required",
+  "validation.enteredSerialNumberDoesnTMatch": "Entered Serial Number doesn't match",
+  "validation.serialNumberMustBe1000CharactersOrLess": "Serial Number must be 1000 characters or less",
+  "validation.serialNumberMustContainCharactersAndACombinationOf": "Serial Number must contain characters and a combination of [-._ ']",
+  "validation.invalidFormatValidFormatsAreGivenInDescription": "Invalid format, valid formats are given in description",
+  "validation.enteredMacAddressDoesnTMatch": "Entered MAC Address doesn't match",
+  "validation.invalidFormatValidFormatIs3001234567891": "Invalid format, valid format is: 3001234567891",
+  "validation.invalideFileExtension": "Invalid file extension, only support 'csv'",
+  "validation.fileSize": "File size limit exceeds from 5MB"
 }
