--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -1,5 +1,5 @@
 {
-  "title": "DPS - Device Pairing Subsystem",
+  "title": "Subsistema de emparejamiento de dispositivos",
   "homeLink": "Casa",
   "mainNavigation": "Navegación Principal",
   "dashboardLink": "Tablero",
@@ -44,5 +44,64 @@
   "credentialMatch": "Coincidencia de credenciales",
   "wrongHttp" : "HTTP incorrecto",
   "validation.langError": "Idioma no soportado",
-  "unprocessibleEntity" : "Entidad no procesable"
+  "unprocessibleEntity" : "Entidad no procesable",
+
+  "serialNumber": "Número de serie",
+  "macAddress": "Dirección MAC",
+  "referenceMsisdn": "Referencia MSISDN",
+  "typeImei": "Tipo IMEI",
+  "retypeImei": "Vuelva a escribir IMEI",
+  "addImeIs": "Añadir IMEIs",
+  "retypeSerialNumber": "Vuelva a escribir el número de serie",
+  "brand": "Marca",
+  "modelName": "Nombre del modelo",
+  "macWiFiAddress": "Dirección MAC (Wi-Fi)",
+  "retypeMacWiFiAddress": "Vuelva a escribir la dirección MAC (Wi-Fi)",
+  "radioAccessTechnologies": "Tecnologías de acceso por radio",
+  "deviceImeiS": "Dispositivo IMEI (s)",
+  "IMEIDeviceInfoOne": "IMEI puede contener caracteres alfanuméricos (0-9, A-F). La longitud del IMEI debe tener entre 14 y 16 caracteres.",
+  "IMEIDeviceInfoTwo": "En una sola solicitud se pueden agregar hasta 5 números IMEI.",
+  "MACInfoOne": "Las direcciones MAC tienen una longitud de 6 bytes (48 bits) y están escritas en los siguientes formatos",
+  "clearSearch": "Borrar búsqueda",
+  "searchRequests": "Solicitudes de búsqueda",
+  "deviceIdentifiers": "Identificadores de dispositivos",
+  "selectTechnologies": "Tecnologías selectas",
+  "generatePairCode": "Generar código de par",
+  "home": "Casa",
+  "devicePairingSubsystem": "Subsistema de emparejamiento de dispositivos",
+  "fileHasBeen": "Archivo ha sido",
+  "uploaded": "Subido",
+  "successfully": "exitosamente",
+  "summary": "Resumen",
+  "total": "Total",
+  "invalid": "Inválido",
+  "valid": "Válido",
+  "clickToDownload": "Haga clic para descargar",
+  "clearAll": "Limpiar todo",
+  "searchFilters": "Filtros de búsqueda",
+  "pairingCode": "Código de emparejamiento",
+  "pairingStatus": "Estado de emparejamiento",
+  "noRequestFound": "No se encontraron solicitudes",
+  "show": "Show",
+  "showing": "Demostración",
+  "requests": "Peticiones",
+  "pleaseWait": "Por favor espere, su solicitud está en proceso",
+  "to": "a",
+
+  "validation.oneOfTheAboveFieldsIsRequired": "Uno de los campos anteriores es obligatorio",
+  "validation.enteredImeiDoesnTMatch": "El IMEI introducido no coincide",
+  "validation.imeiMustContain": "IMEI debe contener de 14 a 16 caracteres y contiene una combinación de [0-9] y [A-F]",
+  "validation.brandMustContainCharactersAndACombinationOf": "La marca debe contener caracteres y una combinación de [-._ ']",
+  "validation.brandMustBe1000CharactersOrLess": "La marca debe tener 1000 caracteres o menos.",
+  "validation.modelNameMustContainCharactersAndACombinationOf": "El nombre del modelo debe contener caracteres y una combinación de [-._ ']",
+  "validation.modelNameMustBe1000CharactersOrLess": "El nombre del modelo debe tener 1000 caracteres o menos",
+  "validation.thisFieldIsRequired": "este campo es requerido",
+  "validation.enteredSerialNumberDoesnTMatch": "El número de serie introducido no coincide",
+  "validation.serialNumberMustBe1000CharactersOrLess": "El número de serie debe tener 1000 caracteres o menos",
+  "validation.serialNumberMustContainCharactersAndACombinationOf": "El número de serie debe contener caracteres y una combinación de [-._ ']",
+  "validation.invalidFormatValidFormatsAreGivenInDescription": "Formato inválido, los formatos válidos se dan en la descripción",
+  "validation.enteredMacAddressDoesnTMatch": "La dirección MAC ingresada no coincide",
+  "validation.invalidFormatValidFormatIs3001234567891": "Formato no válido, el formato válido es: 3001234567891",
+  "validation.invalideFileExtension": "Extensión de archivo inválida, solo soporta 'csv'",
+  "validation.fileSize": "El límite de tamaño de archivo excede de 5MB"
 }
