--- a/src/locales/id/translation.json
+++ b/src/locales/id/translation.json
@@ -1,5 +1,5 @@
 {
-  "title": "DPS - Device Pairing Subsystem",
+  "title": "Subsistem Pasangan Perangkat",
   "homeLink": "Rumah",
   "mainNavigation": "Navigasi Utama",
   "dashboardLink": "Dasbor",
@@ -43,5 +43,64 @@
   "sessionExpired":"Sesi berakhir",
   "credentialMatch": "Pencocokan Kredensial",
   "validation.langError": "Bahasa tidak didukung",
-  "unprocessibleEntity" : "Entitas yang tidak dapat diproses"
+  "unprocessibleEntity" : "Entitas yang tidak dapat diproses",
+
+  "serialNumber": "Nomor seri",
+  "macAddress": "Alamat MAC",
+  "referenceMsisdn": "Referensi MSISDN",
+  "typeImei": "Type IMEI",
+  "retypeImei": "Ketik ulang IMEI",
+  "addImeIs": "Tambahkan IMEI",
+  "retypeSerialNumber": "Ketik ulang nomor seri",
+  "brand": "Merek",
+  "modelName": "Nama model",
+  "macWiFiAddress": "Alamat MAC (Wi-Fi)",
+  "retypeMacWiFiAddress": "Ketik ulang alamat MAC (Wi-Fi)",
+  "radioAccessTechnologies": "Teknologi Akses Radio",
+  "deviceImeiS": "IMEI perangkat",
+  "IMEIDeviceInfoOne": "IMEI dapat berisi karakter alfanumerik (0-9, A-F). Panjang IMEI harus antara 14-16 karakter.",
+  "IMEIDeviceInfoTwo": "Dalam satu permintaan hingga 5 nomor IMEI dapat ditambahkan.",
+  "MACInfoOne": "Alamat MAC panjangnya 6 byte (48 bit), dan ditulis dalam format berikut",
+  "clearSearch": "Bersihkan pencarian",
+  "searchRequests": "Permintaan Pencarian",
+  "deviceIdentifiers": "Pengidentifikasi Perangkat",
+  "selectTechnologies": "Pilih Teknologi",
+  "generatePairCode": "Hasilkan Kode Pasangan",
+  "home": "Rumah",
+  "devicePairingSubsystem": "Subsistem Pasangan Perangkat",
+  "fileHasBeen": "File telah",
+  "uploaded": "Diunggah",
+  "successfully": "berhasil",
+  "summary": "Ringkasan",
+  "total": "Total",
+  "invalid": "Tidak valid",
+  "valid": "Sah",
+  "clickToDownload": "Klik untuk mengunduh",
+  "clearAll": "Bersihkan semua",
+  "searchFilters": "Filter Pencarian",
+  "pairingCode": "Kode Pemasangan",
+  "pairingStatus": "Status pemasangan",
+  "noRequestFound": "Tidak ada permintaan yang ditemukan",
+  "show": "Menunjukkan",
+  "showing": "Menunjukkan",
+  "requests": "Permintaan",
+  "pleaseWait": "Harap tunggu, Permintaan Anda sedang dalam Proses",
+  "to": "untuk",
+
+  "validation.oneOfTheAboveFieldsIsRequired": "Salah satu bidang di atas wajib diisi",
+  "validation.enteredImeiDoesnTMatch": "IMEI yang dimasukkan tidak cocok",
+  "validation.imeiMustContain": "IMEI harus mengandung 14 hingga 16 karakter dan berisi kombinasi [0-9] dan [A-F]",
+  "validation.brandMustContainCharactersAndACombinationOf": "Merek harus mengandung karakter dan kombinasi [-._ ']",
+  "validation.brandMustBe1000CharactersOrLess": "Merek harus 1000 karakter atau kurang",
+  "validation.modelNameMustContainCharactersAndACombinationOf": "Nama Model harus mengandung karakter dan kombinasi [-._ ']",
+  "validation.modelNameMustBe1000CharactersOrLess": "Nama Model harus 1000 karakter atau kurang",
+  "validation.thisFieldIsRequired": "Bagian ini diperlukan",
+  "validation.enteredSerialNumberDoesnTMatch": "Masukkan Nomor Seri tidak cocok",
+  "validation.serialNumberMustBe1000CharactersOrLess": "Nomor Seri harus 1000 karakter atau kurang",
+  "validation.serialNumberMustContainCharactersAndACombinationOf": "Nomor seri harus mengandung karakter dan kombinasi [-._ ']",
+  "validation.invalidFormatValidFormatsAreGivenInDescription": "Format tidak valid, format yang valid diberikan dalam deskripsi",
+  "validation.enteredMacAddressDoesnTMatch": "Alamat MAC yang dimasukkan tidak cocok",
+  "validation.invalidFormatValidFormatIs3001234567891": "Format tidak valid, format yang valid adalah: 3001234567891",
+  "validation.invalideFileExtension": "Ekstensi file tidak valid, hanya mendukung 'csv'",
+  "validation.fileSize": "Batas ukuran file melebihi dari 5MB"
 }
