--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -33,7 +33,7 @@
   "submit": "Enviar",
   "hi": "Hola,",
   "logOut": "Cerrar sesión",
-  "copyRight2018": "Copyright 2018",
+  "copyRight2018": "Derechos de autor 2018",
   "DIRBS": "DIRBS",
   "allRightsReserved": "Todos los derechos reservados",
   "version": "Versión",
@@ -82,11 +82,16 @@
   "pairingCode": "Código de emparejamiento",
   "pairingStatus": "Estado de emparejamiento",
   "noRequestFound": "No se encontraron solicitudes",
+  "RequestFound": "Solicitudes encontradas",
   "show": "Show",
   "showing": "Demostración",
   "requests": "Peticiones",
   "pleaseWait": "Por favor espere, su solicitud está en proceso",
   "to": "a",
+  "alert.warning": "Advertencia!",
+  "button.cancel": "Cancelar",
+  "button.leave": "Salir",
+  "success": "éxito",
 
   "validation.oneOfTheAboveFieldsIsRequired": "Uno de los campos anteriores es obligatorio",
   "validation.enteredImeiDoesnTMatch": "El IMEI introducido no coincide",
@@ -103,5 +108,8 @@
   "validation.enteredMacAddressDoesnTMatch": "La dirección MAC ingresada no coincide",
   "validation.invalidFormatValidFormatIs3001234567891": "Formato no válido, el formato válido es: 3001234567891",
   "validation.invalideFileExtension": "Extensión de archivo inválida, solo soporta 'csv'",
-  "validation.fileSize": "El límite de tamaño de archivo excede de 5MB"
+  "validation.fileSize": "El límite de tamaño de archivo excede de 5MB",
+  "validation.IMSIMustbeDigits": "IMSI debe ser solo dígitos [0-9]",
+  "validation.IMSIShouldbeLessThan": "La longitud de IMSI debe ser de 15 dígitos",
+  "validation.IMSIDoesNotMatch": "IMSIs no coincide"
 }
