Test Cases Fixed

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -90,6 +90,7 @@
   "button.cancel": "Cancel",
   "button.leave": "Leave",
   "success": "Success",
+  "noResultFound": "No results found",
 
   "validation.oneOfTheAboveFieldsIsRequired": "One of the above fields is required",
   "validation.enteredImeiDoesnTMatch": "Entered IMEI doesn't match",
