loader translated and ther bugs

--- a/src/locales/id/translation.json
+++ b/src/locales/id/translation.json
@@ -48,7 +48,7 @@
   "serialNumber": "Nomor seri",
   "macAddress": "Alamat MAC",
   "referenceMsisdn": "Referensi MSISDN",
-  "typeImei": "Type IMEI",
+  "typeImei": "Ketikkan IMEI",
   "retypeImei": "Ketik ulang IMEI",
   "addImeIs": "Tambahkan IMEI",
   "retypeSerialNumber": "Ketik ulang nomor seri",
@@ -93,6 +93,10 @@
   "success": "keberhasilan",
   "noResultFound": "Tidak ada hasil yang ditemukan",
   "language": "Bahasa",
+  "requestHasbeen": "Permintaan telah",
+  "pairingCodeIs": "Kode Pemasangan adalah",
+  "registered": "Terdaftar",
+  "viewRequest": "Lihat Permintaan",
 
   "validation.oneOfTheAboveFieldsIsRequired": "Salah satu bidang di atas wajib diisi",
   "validation.enteredImeiDoesnTMatch": "IMEI yang dimasukkan tidak cocok",
