--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -92,6 +92,10 @@
   "success": "Success",
   "noResultFound": "No results found",
   "language": "Language",
+  "requestHasbeen": "Request has been",
+  "pairingCodeIs": "Pairing Code is",
+  "registered": "Registered",
+  "viewRequest": "View Request",
 
   "validation.oneOfTheAboveFieldsIsRequired": "One of the above fields is required",
   "validation.enteredImeiDoesnTMatch": "Entered IMEI doesn't match",
