--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -98,6 +98,7 @@
   "pairingCodeIs": "El código de emparejamiento es",
   "registered": "Registrado",
   "viewRequest": "Ver solicitud",
+  "wentWrong": "algo salió mal",
 
   "validation.oneOfTheAboveFieldsIsRequired": "Uno de los campos anteriores es obligatorio",
   "validation.enteredImeiDoesnTMatch": "El IMEI introducido no coincide",
