--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -101,14 +101,14 @@
   "validation.oneOfTheAboveFieldsIsRequired": "One of the above fields is required",
   "validation.enteredImeiDoesnTMatch": "Entered IMEI doesn't match",
   "validation.imeiMustContain": "IMEI must contain 14 to 16 characters and contains a combination of [0-9] and [A-F]",
-  "validation.brandMustContainCharactersAndACombinationOf": "Brand must contain characters and a combination of [-._ ']",
+  "validation.brandMustContainCharactersAndACombinationOf": "Brand must contain characters and a combination of [-._ '&]",
   "validation.brandMustBe1000CharactersOrLess": "Brand must be 1000 characters or less",
-  "validation.modelNameMustContainCharactersAndACombinationOf": "Model Name must contain characters and a combination of [-._']",
+  "validation.modelNameMustContainCharactersAndACombinationOf": "Model Name must contain characters and a combination of [-._ '()]",
   "validation.modelNameMustBe1000CharactersOrLess": "Model Name must be 1000 characters or less",
   "validation.thisFieldIsRequired": "This field is required",
   "validation.enteredSerialNumberDoesnTMatch": "Entered Serial Number doesn't match",
   "validation.serialNumberMustBe1000CharactersOrLess": "Serial Number must be 1000 characters or less",
-  "validation.serialNumberMustContainCharactersAndACombinationOf": "Serial Number must contain characters and a combination of [-._ ']",
+  "validation.serialNumberMustContainCharactersAndACombinationOf": "The Serial Number can only contain Alphanumeric characters",
   "validation.invalidFormatValidFormatsAreGivenInDescription": "Invalid format, valid formats are given in description",
   "validation.enteredMacAddressDoesnTMatch": "Entered MAC Address doesn't match",
   "validation.invalidFormatValidFormatIs3001234567891": "Invalid format, valid format is: 3001234567891",
