--- a/src/locales/id/translation.json
+++ b/src/locales/id/translation.json
@@ -102,14 +102,14 @@
   "validation.oneOfTheAboveFieldsIsRequired": "Salah satu bidang di atas wajib diisi",
   "validation.enteredImeiDoesnTMatch": "IMEI yang dimasukkan tidak cocok",
   "validation.imeiMustContain": "IMEI harus mengandung 14 hingga 16 karakter dan berisi kombinasi [0-9] dan [A-F]",
-  "validation.brandMustContainCharactersAndACombinationOf": "Merek harus mengandung karakter dan kombinasi [-._ ']",
+  "validation.brandMustContainCharactersAndACombinationOf": "Merek harus mengandung karakter dan kombinasi [-._ '&]",
   "validation.brandMustBe1000CharactersOrLess": "Merek harus 1000 karakter atau kurang",
-  "validation.modelNameMustContainCharactersAndACombinationOf": "Nama Model harus mengandung karakter dan kombinasi [-._ ']",
+  "validation.modelNameMustContainCharactersAndACombinationOf": "Nama Model harus mengandung karakter dan kombinasi [-._ '()]",
   "validation.modelNameMustBe1000CharactersOrLess": "Nama Model harus 1000 karakter atau kurang",
   "validation.thisFieldIsRequired": "Bagian ini diperlukan",
   "validation.enteredSerialNumberDoesnTMatch": "Masukkan Nomor Seri tidak cocok",
   "validation.serialNumberMustBe1000CharactersOrLess": "Nomor Seri harus 1000 karakter atau kurang",
-  "validation.serialNumberMustContainCharactersAndACombinationOf": "Nomor seri harus mengandung karakter dan kombinasi [-._ ']",
+  "validation.serialNumberMustContainCharactersAndACombinationOf": "Nomor Seri hanya dapat berisi karakter alfanumerik",
   "validation.invalidFormatValidFormatsAreGivenInDescription": "Format tidak valid, format yang valid diberikan dalam deskripsi",
   "validation.enteredMacAddressDoesnTMatch": "Alamat MAC yang dimasukkan tidak cocok",
   "validation.invalidFormatValidFormatIs3001234567891": "Format tidak valid, format yang valid adalah: 3001234567891",
