--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -101,9 +101,9 @@
   "validation.oneOfTheAboveFieldsIsRequired": "One of the above fields is required",
   "validation.enteredImeiDoesnTMatch": "Entered IMEI doesn't match",
   "validation.imeiMustContain": "IMEI must contain 14 to 16 characters and contains a combination of [0-9] and [A-F]",
-  "validation.brandMustContainCharactersAndACombinationOf": "Brand must contain characters and a combination of [-._ '&]",
+  "validation.brandMustContainCharactersAndACombinationOf": "Brand must contain characters and a combination of [&- ]",
   "validation.brandMustBe1000CharactersOrLess": "Brand must be 1000 characters or less",
-  "validation.modelNameMustContainCharactersAndACombinationOf": "Model Name must contain characters and a combination of [-._ '()]",
+  "validation.modelNameMustContainCharactersAndACombinationOf": "Model Name must contain characters and a combination of [-()' ]",
   "validation.modelNameMustBe1000CharactersOrLess": "Model Name must be 1000 characters or less",
   "validation.thisFieldIsRequired": "This field is required",
   "validation.enteredSerialNumberDoesnTMatch": "Entered Serial Number doesn't match",
