--- a/src/locales/id/translation.json
+++ b/src/locales/id/translation.json
@@ -102,9 +102,9 @@
   "validation.oneOfTheAboveFieldsIsRequired": "Salah satu bidang di atas wajib diisi",
   "validation.enteredImeiDoesnTMatch": "IMEI yang dimasukkan tidak cocok",
   "validation.imeiMustContain": "IMEI harus mengandung 14 hingga 16 karakter dan berisi kombinasi [0-9] dan [A-F]",
-  "validation.brandMustContainCharactersAndACombinationOf": "Merek harus mengandung karakter dan kombinasi [-._ '&]",
+  "validation.brandMustContainCharactersAndACombinationOf": "Merek harus mengandung karakter dan kombinasi [&- ]",
   "validation.brandMustBe1000CharactersOrLess": "Merek harus 1000 karakter atau kurang",
-  "validation.modelNameMustContainCharactersAndACombinationOf": "Nama Model harus mengandung karakter dan kombinasi [-._ '()]",
+  "validation.modelNameMustContainCharactersAndACombinationOf": "Nama Model harus mengandung karakter dan kombinasi [-()' ]",
   "validation.modelNameMustBe1000CharactersOrLess": "Nama Model harus 1000 karakter atau kurang",
   "validation.thisFieldIsRequired": "Bagian ini diperlukan",
   "validation.enteredSerialNumberDoesnTMatch": "Masukkan Nomor Seri tidak cocok",
