--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -103,9 +103,9 @@
   "validation.oneOfTheAboveFieldsIsRequired": "Uno de los campos anteriores es obligatorio",
   "validation.enteredImeiDoesnTMatch": "El IMEI introducido no coincide",
   "validation.imeiMustContain": "IMEI debe contener de 14 a 16 caracteres y contiene una combinación de [0-9] y [A-F]",
-  "validation.brandMustContainCharactersAndACombinationOf": "La marca debe contener caracteres y una combinación de [-._ '&]",
+  "validation.brandMustContainCharactersAndACombinationOf": "La marca debe contener caracteres y una combinación de [&- ]",
   "validation.brandMustBe1000CharactersOrLess": "La marca debe tener 1000 caracteres o menos.",
-  "validation.modelNameMustContainCharactersAndACombinationOf": "El nombre del modelo debe contener caracteres y una combinación de [-._ '()]",
+  "validation.modelNameMustContainCharactersAndACombinationOf": "El nombre del modelo debe contener caracteres y una combinación de [-()' ]",
   "validation.modelNameMustBe1000CharactersOrLess": "El nombre del modelo debe tener 1000 caracteres o menos",
   "validation.thisFieldIsRequired": "este campo es requerido",
   "validation.enteredSerialNumberDoesnTMatch": "El número de serie introducido no coincide",
