minor changes in version

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -33,7 +33,7 @@
   "submit": "Submit",
   "hi": "Hi,",
   "logOut": "Logout",
-  "copyRight2018": "Copyright 2018",
+  "copyRight2018": "Copyright 2018-2019",
   "DIRBS": "DIRBS",
   "allRightsReserved": "All Rights Reserved",
   "version": "Version",
