--- a/src/locales/id/translation.json
+++ b/src/locales/id/translation.json
@@ -33,7 +33,7 @@
   "submit": "Menyerahkan",
   "hi": "Hai,",
   "logOut": "Keluar",
-  "copyRight2018": "Hak Cipta 2018",
+  "copyRight2018": "Hak Cipta 2018-2019",
   "DIRBS": "DIRBS",
   "allRightsReserved": "Seluruh hak cipta",
   "version": "Versi",
